feat(replication): support images list replication
